--- a/src/main/resources/TODO
+++ b/src/main/resources/TODO
@@ -1,5 +1,4 @@
-- Add and store custom avatar (module)
-    - Get custom avatar or default avatar
+- Get default picture if avatar doesnt exist
 - Storing employee's friends
 - Editing employee
 - Add group
