Users can add friends

--- a/src/main/resources/TODO
+++ b/src/main/resources/TODO
@@ -1,5 +1,4 @@
-- Get default picture if avatar doesnt exist
-- Storing employee's friends
+- Show employee's friends
 - Editing employee
 - Add group
 - Teacher can add group, faculty
